# tb-media-leadtool

./: .gitignore  LICENSE  PRODUCTION.md  QA_GO_NO_GO_REPORT.md  README.md  pyproject.toml
config/: default.yaml
examples/: local_notion_candidates.csv  notion_sync_candidates.csv  public_companies_sample.csv
examples/mock_sites/: impressum  kontakt
examples/mock_sites/lead1/: index.html
examples/mock_sites/lead2/: index.html
examples/mock_sites/lead3/: index.html
tb_leads/audit/: cta_checks.py  pagespeed_client.py  seo_checks.py  service.py  website_probe.py
tb_leads/cli/: main.py
tb_leads/collectors/: manual_public_csv.py  public_nominatim.py  public_osm.py  seed_public_demo.py
tb_leads/compliance/: checker.py
tb_leads/config/: loader.py
tb_leads/db/: repository.py  schema.py
tb_leads/enrich/: contact_enrichment.py  validators.py
tb_leads/reporting/: csv_exporter.py  summary.py
tb_leads/scoring/: engine.py
tb_leads/sync/: notion_client.py
tb_leads/utils/: errors.py  http.py  retry.py  runlog.py  throttle.py
tests/: test_collector_nominatim.py  test_collector_osm.py  test_config_effective.py  test_csv_export.py  test_dedup.py  test_e2e_pipeline.py  test_enrichment.py  test_network_resilience.py  test_notion_mock_integration.py  test_run_partial_threshold.py  test_scoring.py  test_sync_filters_config.py
