[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tb-media-leadtool"
version = "0.1.0"
description = "TB Media internal lead generation MVP"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TB MEDIA UG" }]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
tb-leads = "tb_leads.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tb_leads*"]
